--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -1,51 +1,55 @@
 #services {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  padding: 20px;
-  max-width: 1000px;
-  margin: 0 auto;
+  width: 100vw;
+  max-width: 100%;
+}
+
+#main {
+  padding-top: 1rem;
 }
 
 .service {
-  padding-top: 2rem;
+  position: relative;
   display: flex;
   flex-direction: column;
   text-align: center;
   text-decoration: none;
   color: inherit;
-  gap: 8px;
 }
 
 .service img {
   width: 100%;
   aspect-ratio: 3 / 2; /* 600x400 ratio */
   object-fit: cover;
-  border-radius: 10px;
   display: block;
-  transition: transform 0.2s ease;
+  transition: filter 0.3s ease;
 }
 
 .service img:hover {
-  transform: scale(1.03);
+  filter: brightness(0.4);
 }
 
-/* Caption styling */
 .service span {
-  font-size: 1.3rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  opacity: 0;
+  color: var(--text);
+  font-size: 1.6rem;
   font-weight: 600;
-  display: block;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
 }
 
-/* Responsive */
-@media (max-width: 900px) {
-  #bands {
-    grid-template-columns: repeat(2, 1fr);
-  }
+.service:hover span {
+  opacity: 1;
 }
 
-@media (max-width: 500px) {
-  #bands {
+@media (max-width: 700px) {
+  #services {
     grid-template-columns: 1fr;
   }
 }
