--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -8,7 +8,7 @@
 
 #contact-container h1 {
   text-align: center;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 /* Apply box-sizing to form, inputs, and textarea */
@@ -36,7 +36,12 @@
   border: 1px solid var(--text); /* input border */
   font-size: 1rem;
   color: var(--text);
-  background-color: var(--primary); /* input background */
+  background-color: var(--secondary); /* input background */
+
+  outline: none;
+  box-shadow: none;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 #contact-form textarea {
