--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,7 +17,7 @@
 .image-wrapper img {
   /* margin-left: 2vw;
   margin-right: 2vw; */
-  width: 50%;
+  width: 60%;
   height: auto;
   display: block;
   /* translate: 25vw 8vh; */
@@ -37,9 +37,9 @@
 
 
 /* Mobile layout: text below image */
-@media (max-width: 1000px) {
+@media (max-width: 700px) {
 .image-wrapper img {
-  width: 100%;
+  width: 90vw;
   height: auto;
   display: block;
   /* translate: 25vw 8vh; */
